move strain line receipt and container thaw details into model methods to simplify templates. fix bug where first strain stock bullet point not aligning correctly.

--- a/worm_strains/static/stylesheets/strains.sass
+++ b/worm_strains/static/stylesheets/strains.sass
@@ -54,6 +54,7 @@
     margin-top: $vertical-section-whitespace
 
   ul
+    float: left
     width: 100%
     padding: 0px
     margin: 0px
